# trailer-tracker

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js
src/: main.tsx
src-actix/: main.rs
src/assets/components/: Navigation.tsx
src/assets/components/fleet-overview/: FleetMap.tsx
src/assets/components/fleet-overview/sidebar/: ContentSelector.tsx  FleetFilters.tsx  FleetItemComponent.tsx  FleetList.tsx  FleetSidebar.tsx
src/assets/components/fleet-overview/sidebar/filters/: FleetFilterDropdown.tsx  FleetSearchFilter.tsx  FleetStatusFilter.tsx
src/assets/components/messages/: NoSelectedMessageGroup.tsx
src/assets/components/messages/message-board/: MessageBoard.tsx  UserMessage.tsx
src/assets/components/messages/sidebar/: MessageGroupFilters.tsx  MessageGroupItemComponent.tsx  MessagesGroupList.tsx  MessagesSidebar.tsx
src/assets/components/settings/: About.tsx  InterfaceSettings.tsx  SettingsModal.tsx
src/assets/components/variants/: TTButton.tsx  TTSwitch.tsx
src/assets/pages/: ErrorPage.tsx  FleetOverviewPage.tsx  Home.tsx  MessagesPage.tsx
src/assets/providers/: Settings.tsx  Theme.tsx
src/assets/scss/: index.scss
src/assets/ts/: fleet-item-status.ts  fleet-item.ts  fleet-management.ts  report.ts  settings.ts  simple-date-time.ts
