[package]
name = "trailer-tracker"
version = "0.0.0"
description = "A web application for keeping track of trucks and their trailers"
edition = "2021"
build = "src-actix/build.rs"

[[bin]]
name = "trailer-tracker"
path = "src-actix/main.rs"

[dependencies]
actix-web = { version = "4.9.0" }
futures-util = "0.3.30"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.125" }
env_logger = "0.11.5"
include_dir = "0.7.4"
walkdir = "2.5.0"
awc = "3.1.0"
log = "0.4.22"


[build-dependencies]
include_dir = "0.7.4"
walkdir = "2.5.0"